--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,12 @@
 {
+
+    "name": "kedrya/composerTestPackage",
+    "description": "A package with bad namespace",
+    "require": {
+        "php": ">=5.3.0",
+        "monolog/monolog": "1.16"
+    },
+
     "require": {
         "monolog/monolog": "1.16"
     },
